--- a/public/html/user.html
+++ b/public/html/user.html
@@ -27,6 +27,7 @@
 			<tbody></tbody>
 		</table>
 	</div>
-	<script src="../js/user.js"></script>
+	<!-- <script src="../js/user.js"></script> -->
+	<script src="../js/user-js.js"></script>
 </body>
 </html>
