--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>홈페이지</title>
-</head>
-<body>
-  <h1>안녕하세요.</h1>
-</body>
-</html>
+<meta http-equiv="refresh" content="0; url=/user/li">
